# SoftwarePortfolie

./: CMakeLists.txt
include/: Analyse.h  DatabaseManager.h  Fjende.h  FjendeFactory.h  GameManager.h  Grotte.h  GrotteGenerator.h  HeltRepository.h  Hero.h  HeroRepository.h  Hjaelpefunktioner.h  KampManager.h  Karakter.h  StandardFjendeFactory.h  Vaaben.h  VaabenSaelger.h  Våben.h  Weapon.h
src/: Analyse.cpp  DatabaseManager.cpp  Fjende.cpp  GameManager.cpp  Grotte.cpp  GrotteGenerator.cpp  HeltRepository.cpp  Hero.cpp  HeroRepository.cpp  Hjaelpefunktioner.cpp  KampManager.cpp  Karakter.cpp  StandardFjendeFactory.cpp  Vaaben.cpp  VaabenSaelger.cpp  Våben.cpp  Weapon.cpp  main.cpp
